--- a/app/src/main/res/layout/activity_adapter_detail_karyawan.xml
+++ b/app/src/main/res/layout/activity_adapter_detail_karyawan.xml
@@ -7,8 +7,8 @@
     tools:context=".adapter_detail_karyawan">
 
     <LinearLayout
-        android:layout_width="413dp"
-        android:layout_height="278dp"
+        android:layout_width="match_parent"
+        android:layout_height="272dp"
         android:background="@color/cklt_muda"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +24,7 @@
             <TextView
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
                 android:text="ID"
                 android:textColor="@color/black"
                 android:textSize="25dp"
@@ -42,7 +43,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -57,7 +58,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:layout_marginStart="160dp"
+                android:layout_marginStart="155dp"
                 android:text="Tanggal Lahir"
                 android:textColor="@color/black"
                 android:textSize="25dp"
@@ -85,7 +86,6 @@
                 android:background="@drawable/pinggiran"
                 tools:ignore="SpeakableTextPresentCheck" />
 
-
         </LinearLayout>
 
         <LinearLayout
@@ -106,7 +106,7 @@
             <TextView
                 android:layout_width="90dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="120dp"
+                android:layout_marginStart="140dp"
                 android:text="Gender"
                 android:textColor="@color/black"
                 android:textSize="25dp"
@@ -131,7 +131,7 @@
                 android:id="@+id/GenderADPTR_DTL"
                 android:layout_width="155dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:background="@drawable/pinggiran"
                 tools:ignore="SpeakableTextPresentCheck" />
         </LinearLayout>
