--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -257,6 +257,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="0dp"
+        android:id="@+id/navbottom"
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
