--- a/app/src/main/res/layout/activity_recycle_detail_kryn.xml
+++ b/app/src/main/res/layout/activity_recycle_detail_kryn.xml
@@ -41,6 +41,7 @@
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navbottom"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:background="@color/coklat"
