--- a/app/src/main/res/layout/activity_riwayat_pesanan.xml
+++ b/app/src/main/res/layout/activity_riwayat_pesanan.xml
@@ -42,6 +42,7 @@
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navbottom"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:background="@color/coklat"
