--- a/app/src/main/res/layout/activity_input_karyawan.xml
+++ b/app/src/main/res/layout/activity_input_karyawan.xml
@@ -47,6 +47,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navbottom"
         android:layout_width="0dp"
         android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
